refactoring: fixed layout's issues with sizes, grid/flex and scrollbar

--- a/styles/_globals.scss
+++ b/styles/_globals.scss
@@ -20,6 +20,7 @@ body {
 
 main {
   flex-grow: 1;
+  overflow-x: hidden;
 }
 
 h1, .h1,
