--- a/styles/blocks/_checkbox.scss
+++ b/styles/blocks/_checkbox.scss
@@ -44,6 +44,10 @@
       }
     }
     
+    &:user-invalid {
+      border-color: var(--color-red);
+    }
+    
     &::after {
       content: '✔';
       color: var(--color-light);
