--- a/styles/blocks/_field.scss
+++ b/styles/blocks/_field.scss
@@ -55,6 +55,10 @@
     &::placeholder {
       color: var(--color-dark-40);
     }
+    
+    &:user-invalid {
+      border-color: var(--color-red);
+    }
   }
   
   textarea.field__control {
