--- a/styles/blocks/_header.scss
+++ b/styles/blocks/_header.scss
@@ -24,6 +24,18 @@
     @include laptop {
       padding-block: rem(14);
     }
+    
+    @include mobile-s {
+      font-size: rem(12);
+    }
+    
+    &-link {
+      .icon {
+        @include mobile-s {
+          column-gap: rem(5);
+        }
+      }
+    }
   }
 
   &__body {
