--- a/styles/main.css
+++ b/styles/main.css
@@ -373,6 +373,7 @@ body {
 
 main {
   flex-grow: 1;
+  overflow-x: hidden;
 }
 
 h1, .h1,
@@ -655,6 +656,16 @@ button[aria-label]::before {
     padding-block: 0.875rem;
   }
 }
+@media (width <= 30.06125rem) {
+  .header__promo {
+    font-size: 0.75rem;
+  }
+}
+@media (width <= 30.06125rem) {
+  .header__promo-link .icon {
+    column-gap: 0.3125rem;
+  }
+}
 .header__body {
   padding-block: 1.5rem;
   background-color: var(--color-dark-10);
@@ -778,6 +789,16 @@ button[aria-label]::before {
 @media (width <= 90.06125rem) {
   .soc1als--3-cols .soc1als__link {
     height: 3rem;
+  }
+}
+@media (any-hover: hover) {
+  .soc1als--3-cols .soc1als__link:hover {
+    border-color: var(--color-accent);
+  }
+}
+@media (any-hover: none) {
+  .soc1als--3-cols .soc1als__link:active {
+    border-color: var(--color-accent);
   }
 }
 .soc1als__list {
@@ -929,6 +950,7 @@ button[aria-label]::before {
 .metrics__item {
   display: flex;
   flex-direction: column-reverse;
+  justify-content: start;
   row-gap: 0.625rem;
   padding: 3.125rem;
 }
@@ -1867,13 +1889,13 @@ button[aria-label]::before {
   display: flex;
   flex-direction: column;
   align-items: center;
-  row-gap: 2.5rem;
+  row-gap: 3.75rem;
   max-width: 31.25rem;
   margin-inline: auto;
 }
 @media (width <= 90.06125rem) {
   .review-card {
-    row-gap: 1.875rem;
+    row-gap: 3.125rem;
   }
 }
 .review-card__author {
@@ -2534,6 +2556,9 @@ button[aria-label]::before {
 .field__control::placeholder {
   color: var(--color-dark-40);
 }
+.field__control:user-invalid {
+  border-color: var(--color-red);
+}
 .field textarea.field__control {
   resize: vertical;
   min-height: 10.1875rem;
@@ -2757,6 +2782,9 @@ button[aria-label]::before {
 .checkbox__input:not(:checked)::after {
   opacity: 0;
   visibility: hidden;
+}
+.checkbox__input:user-invalid {
+  border-color: var(--color-red);
 }
 .checkbox__input::after {
   content: "✔";
